--- a/index.html
+++ b/index.html
@@ -15,45 +15,47 @@
                 <input type="search" name="search" id="search" placeholder="Search">  
             </div>
         <div class="gallery">
-            <a href="./photos/01.jpg" data-caption="Farm">
-                <img src="./photos/thumbnails/01.jpg" alt="Landscape">
+            <a href="./photos/01.jpg" data-caption="Hay Bales">
+                <img src="./photos/thumbnails/01.jpg" alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields.
+                ">
             </a>
-            <a href="./photos/02.jpg" data-caption="Water">
-                <img src="./photos/thumbnails/02.jpg" alt="Landscape">
+            <a href="./photos/02.jpg" data-caption="Lake">
+                <img src="./photos/thumbnails/02.jpg" alt="The lake was so calm today. We had a great view of the snow on the mountains from here.">
             </a>
-            <a href="./photos/03.jpg" data-caption="Grass">
-                <img src="./photos/thumbnails/03.jpg" alt="First image">
+            <a href="./photos/03.jpg" data-caption="Canyon">
+                <img src="./photos/thumbnails/03.jpg" alt="I hiked to the top of the mountain and got this picture of the canyon and trees below.
+                ">
             </a>
-            <a href="./photos/04.jpg" data-caption="Ice">
-                <img src="./photos/thumbnails/04.jpg" alt="Landscape">
+            <a href="./photos/04.jpg" data-caption="Iceberg">
+                <img src="./photos/thumbnails/04.jpg" alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. ">
             </a>
-            <a href="./photos/05.jpg" data-caption="Rocks">
-                <img src="./photos/thumbnails/05.jpg" alt="Landscape">
+            <a href="./photos/05.jpg" data-caption="Desert">
+                <img src="./photos/thumbnails/05.jpg" alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
             </a>
-            <a href="./photos/06.jpg" data-caption="Forest">
-                <img src="./photos/thumbnails/06.jpg" alt="Landscape">
+            <a href="./photos/06.jpg" data-caption="Fall">
+                <img src="./photos/thumbnails/06.jpg" alt="Fall is coming, I love when the leaves on the trees start to change color.">
             </a>
-            <a href="./photos/07.jpg" data-caption="Lake">
-                <img src="./photos/thumbnails/07.jpg" alt="Landscape">
+            <a href="./photos/07.jpg" data-caption="Plantation">
+                <img src="./photos/thumbnails/07.jpg" alt="I drove past this plantation yesterday, everything is so green!">
             </a>
-            <a href="./photos/08.jpg" data-caption="Sand">
-                <img src="./photos/thumbnails/08.jpg" alt="Landscape">
+            <a href="./photos/08.jpg" data-caption="Dunes">
+                <img src="./photos/thumbnails/08.jpg" alt="My summer vacation to the Oregon Coast. I love the sandy dunes!">
             </a>
-            <a href="./photos/09.jpg" data-caption="Road">
-                <img src="./photos/thumbnails/09.jpg" alt="Landscape">
+            <a href="./photos/09.jpg" data-caption="Countryside Lane">
+                <img src="./photos/thumbnails/09.jpg" alt="We enjoyed a quiet stroll down this countryside lane. ">
             </a>
-            <a href="./photos/10.jpg" data-caption="Ocean">
-                <img src="./photos/thumbnails/10.jpg" alt="Landscape">
+            <a href="./photos/10.jpg" data-caption="Sunset">
+                <img src="./photos/thumbnails/10.jpg" alt="Sunset at the coast! The sky turned a lovely shade of orange.">
             </a>
             <a href="./photos/11.jpg" data-caption="Cave">
-                <img src="./photos/thumbnails/11.jpg" alt="Landscape">
+                <img src="./photos/thumbnails/11.jpg" alt="I did a tour of a cave today and the view of the landscape below was breathtaking.">
             </a>
-            <a href="./photos/12.jpg" data-caption="Mountain">
-                <img src="./photos/thumbnails/12.jpg" alt="Landscape">
+            <a href="./photos/12.jpg" data-caption="Bluebells">
+                <img src="./photos/thumbnails/12.jpg" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
             </a>
         </div>
     </section>
-    <script src="js/baguetteBox.min.js" async></script>
+    <script src="js/baguetteBox.min.js"></script>
     <script src="js/searchFilter.js"></script>
     <script src="js/app.js"></script>​
 </body>
